data/derived/sp14/progs/unify/prog3771.ml.out
Characters 98-116:
  else (intlist (x / 10))::[x mod 10] in
       ^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
